<?xml version="1.0"?>
<package format="2">
  <name>axis_tracker</name>
  <version>0.0.0</version>
  <description>The axis_tracker package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geographic_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>project11</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
  </export>
</package>
